文档切换中文名

--- a/需求文档/2025-11-26/前端/前端技术设计文档.md
+++ b/需求文档/2025-11-26/前端/前端技术设计文档.md
@@ -3,7 +3,7 @@
 **版本**: 1.0
 **日期**: 2025-11-27
 **状态**: 拟定中
-**基于**: `frontend_requirements.md`, `product_spec.md`, `Frontend.antigravity`
+**基于**: `前端需求文档.md`, `product_spec.md`, `Frontend.antigravity`
 
 ## 1. 架构概览
 
