--- a/需求文档/2025-11-26/后端/后端需求文档.md
+++ b/需求文档/2025-11-26/后端/后端需求文档.md
@@ -25,7 +25,7 @@
 - **Service (Interface + Impl)**: 核心业务逻辑，事务控制 (`@Transactional`)，DTO 转换。
 - **Repository**: 接口继承 `JpaRepository`，仅处理数据访问。
 - **Entity**: 数据库映射，使用 JPA 注解。
-- **DTO**: 数据传输对象，使用 `record` (Java 14+) 或 `@Data` 类，负责输入校验。
+- **DTO**: 数据传输对象，使用 `@Data` 类，负责输入校验。
 
 ## 4. 数据库设计 (Schema)
 基于产品文档的数据模型：
