--- a/需求文档/2025-11-26/后端/后端技术设计文档.md
+++ b/需求文档/2025-11-26/后端/后端技术设计文档.md
@@ -2,43 +2,43 @@
 
 **日期**: 2025-11-26
 **角色**: 资深 Java 高级工程师
-**来源**: 后端需求文档 (backend_requirements.md)
+**来源**: 后端需求文档 (后端需求文档.md)
 
 ## 1. 接口设计 (API Specification)
 
 ### 1.1 认证模块 (AuthController)
 - **POST /api/auth/login**
   - Request: `LoginRequest { username, password }`
-  - Response: `ApiResponse<AuthResponse> { token, user: { id, username, role } }`
+  - Response: `ResponseEntity<ApiResponse<AuthResponse>>` { token, user: { id, username, role } }
   - Logic: 校验用户名密码 -> 生成 JWT -> 返回。
 - **POST /api/auth/register**
   - Request: `RegisterRequest { username, password, email }`
-  - Response: `ApiResponse<Void>`
+  - Response: `ResponseEntity<ApiResponse<Void>>`
   - Logic: 查重 -> 密码 BCrypt 加密 -> 存库。
 
 ### 1.2 文章模块 (ArticleController)
 - **GET /api/articles**
   - Query: `page, size, keyword, categoryId, tagId`
-  - Response: `ApiResponse<Page<ArticleSummaryDTO>>`
+  - Response: `ResponseEntity<ApiResponse<Page<ArticleSummaryDTO>>>`
   - Logic: 动态 JPA Specification 查询 -> DTO 映射。
 - **GET /api/articles/{id}**
-  - Response: `ApiResponse<ArticleDetailDTO>`
+  - Response: `ResponseEntity<ApiResponse<ArticleDetailDTO>>`
   - Logic: 查库 -> 浏览量 +1 (异步) -> 返回。
 - **POST /api/articles** (Admin)
   - Request: `ArticleCreateRequest { title, content, slug, categoryId, tagIds }`
-  - Response: `ApiResponse<Long>` (ID)
+  - Response: `ResponseEntity<ApiResponse<Long>>` (ID)
   - Logic: 校验 Slug 唯一性 -> 存库 -> 处理标签关联。
 - **PUT /api/articles/{id}** (Admin)
   - Request: `ArticleUpdateRequest`
-  - Response: `ApiResponse<Void>`
+  - Response: `ResponseEntity<ApiResponse<Void>>`
 - **POST /api/articles/{id}/publish** (Admin)
   - Query: `publish (boolean)`
-  - Response: `ApiResponse<Void>`
+  - Response: `ResponseEntity<ApiResponse<Void>>`
 
 ### 1.3 评论模块 (CommentController)
 - **POST /api/articles/{id}/comments**
   - Request: `CommentCreateRequest { content, parentId, authorName, email }`
-  - Response: `ApiResponse<CommentDTO>`
+  - Response: `ResponseEntity<ApiResponse<CommentDTO>>`
   - Logic: 校验文章存在 -> 存库 (状态默认 PENDING)。
 
 ## 2. 数据库详细设计 (Database Schema)
